--- a/index.html
+++ b/index.html
@@ -435,25 +435,38 @@
                             <span class="label-equipe-crea">Création lumière /</span> Damien Peray &amp; Serena Andreasi
                             <br>
                         </p>
-                        <h3>Gallerie</h3>
+                        <h3>Gallerie (8 photos)</h3>
                         <div class="row">
-                            <div class="col-xs-4">
+                            <div class="col-xs-3">
                                 <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg" alt="danseuse sur cercle de terre " class="img-responsive">
                                 </a>
                             </div>
-                            <div class="col-xs-4">
-                                <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg" alt="danseuse sur cercle de terre 2" class="img-responsive"></a>
+                            <div class="col-xs-3">
+                                            <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_CartonMoliere.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_CartonMoliere.jpg" alt="cartonNB" class="img-responsive"></a>
                             </div>
-                            <div class="col-xs-4">
+                            <div class="col-xs-3">
                                 <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_Journalistes.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_Journalistes.jpg" alt="journalistes" class="img-responsive"></a>
                             </div>
+                                <div class="col-xs-3">
+                           <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg" alt="pyramide" class="img-responsive"></a>
+                            </div>
                         </div>
-                        <div class="hidden">
-                            <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_CartonMoliere.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_CartonMoliere.jpg" alt="cartonNB" class="img-responsive"></a>
+                         <div class="row">
+                            <div class="col-xs-3">
+                          <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg" alt="danseuse sur cercle de terre 2" class="img-responsive"></a>
+                 </div>
+                            <div class="col-xs-3">
                             <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_palpitanteaventure.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_palpitanteaventure.jpg" alt="chanson" class="img-responsive"></a>
-                            <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg" alt="pyramide" class="img-responsive"></a>
+                           </div>
+                            <div class="col-xs-3">
                             <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_tousLucas.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_tousLucas.jpg" alt="tousLucas" class="img-responsive"></a>
+                               </div>
+                            <div class="col-xs-3">
                             <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg" alt="danseuse theatre" class="img-responsive"></a>
+                            </div>
+                            </div>
+                        
+                            <div class="hidden">
                         </div>
                             <script>
     $(".fancyboxSpectateurs")
@@ -591,22 +604,22 @@
                                         </div>
                                         <div class="modal-body dates-passees">
                                             <ul>
-                                                <li>Mardi 20 janvier 2015 à 20h et mercredi 21 janvier à 12h45
-                                                    <br> Fabrique Arts, Culture, Toulouse (31)</li>
-                                                <li>Samedi 21 février à 20h30
-                                                    <br> Le Préau /// La Salvetat Saint Gilles (31)</li>
-                                                <li>Samedi 7 mars à 20h30
-                                                    <br> Salle des Fêtes /// Lapanouse de Séverac (12)</li>
-                                                <li>Samedi 28 mars à 21h /// Salle du Foyer de la Mairie /// Clarac (31)</li>
-                                                <li>Samed 4 avril à 20h30 /// Les Halles /// Villasavary (11)</li>
-                                                <li>Samedi 6 juin à 21h /// Le Kiosque /// Villefranche de Rouergue (12)</li>
-                                                <li>Samedi 13 juin à 21h30 /// La Halle du Café-Théâtre /// Le Burgaud (31)</li>
-                                                <li>Vendredi 21 août /// Cour d'honneur /// Séverac le Château (12)</li>
-                                                <li>Vendredi 2 octobre /// Toulouse (31)</li>
-                                                <li>Mercredi 14 octobre /// Saint Gaudens (31)</li>
-                                                <li>Samedi 17 octobre /// La Canourgue (48)</li>
-                                                <li>Samedi 14 novembre /// Salle des fêtes /// Labastide Saint Sernin (31)</li>
-                                                <li>Jeudi 10 mars 2016 /// Scène des Trois Ponts /// Castelnaudary (11)</li>
+                                                <li><b>2016</b></li>
+                                                <li>- 10 mars: Scène des Trois Ponts - Castelnaudary (11)</li>
+                                                <br>
+                                                <li><b>2015</b></li>
+                                                <li>- 14 novembre: Salle des fêtes - Labastide Saint Sernin (31)</li>
+                                                <li>- 17 octobre: La Canourgue (48)</li>
+                                                <li>- 14 octobre: Saint Gaudens (31)</li>
+                                                <li>- 2 octobre: Toulouse (31)</li>
+                                                <li>- 21 août: Cour d'honneur - Séverac le Château (12)</li>
+                                                <li>- 13 juin: La Halle du Café-Théâtre - Le Burgaud (31)</li>
+                                                <li>- 6 juin: Le Kiosque - Villefranche de Rouergue (12)</li>
+                                                <li>- 4 avril: Les Halles - Villasavary (11)</li>
+                                                <li>- 28 mars: Salle du Foyer de la Mairie - Clarac (31)</li>
+                                                <li>- 7 mars: Salle des Fêtes - Lapanouse de Séverac (12)</li>
+                                                <li>- 21 février: Le Préau - La Salvetat Saint Gilles (31)</li>
+                                                <li>- 20 et 21 janvier 2015 : Fabrique Arts, Culture - Toulouse (31)</li>
                                             </ul>
                                         </div>
                                     </div>
