optimise pics + add fin
optimise pics + add fin

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                                             <li><a class="page-scroll link-nav" href="#spectateurs">Spectateur(s)</a></li>
                                             <li><a class="page-scroll link-nav" href="#satyre">Le Satyre</a></li>
                                             <li><a class="page-scroll link-nav" href="#monologue">Le Monologue<br>d'une tueuse</a></li>
+                                             <li><a class="page-scroll link-nav" href="#ERPLJ">En Route<br>pour la joie</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -183,7 +184,7 @@
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
                     <p>
-                        La compagnie a présenté La cité des dragons et des animations médiévales à Sévérac (Aveyron) durant les mois de Juillet et Août. Elle prépare désormais la rentrée de <a href="#spectateurs">Spectateur(s)</a>.
+                        La compagnie a présenté La cité des dragons et des animations médiévales à Sévérac (Aveyron) durant les mois de Juillet et Août. Elle prépare désormais la rentrée de <a href="#spectateurs">Spectateur(s)</a> pour la nouvelle saison 2016-2017.
                     </p>
                     <h2>Prochaines dates</h2>
                     <!-- liste dates -->
@@ -413,6 +414,7 @@
                     <!--<h1>Créations</h1>-->
                     <div class="creations spectateurs" id="spectateurs">
                         <h2>Spectateur(s) - un accident de théâtre</h2>
+                        <p><small>Saisons 2014-2015 et 2015-2016</small></p>
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/119352016"></iframe>
                         </div>
@@ -435,7 +437,7 @@
                             <span class="label-equipe-crea">Création lumière /</span> Damien Peray &amp; Serena Andreasi
                             <br>
                         </p>
-                        <h3>Gallerie (8 photos)</h3>
+                        <h3>Gallerie</h3>
                         <div class="row">
                             <div class="col-xs-3">
                                 <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg" alt="danseuse sur cercle de terre " class="img-responsive">
@@ -465,26 +467,23 @@
                             <a class="fancyboxSpectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg"><img src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg" alt="danseuse theatre" class="img-responsive"></a>
                             </div>
                             </div>
-                        
-                            <div class="hidden">
-                        </div>
                             <script>
-    $(".fancyboxSpectateurs")
-        .attr('rel', 'gallery')
-        .fancybox({
-            padding: 0
-        });
-    </script>
-        <script type="text/javascript">
-    $('.image').fancyboxSpectateurs({
-        padding: 0,
-        helpers: {
-            overlay: {
-                locked: false
-            }
-        }
-    });
-    </script>
+                                $(".fancyboxSpectateurs")
+                                .attr('rel', 'gallery')
+                                .fancybox({
+                                    padding: 0
+                                });
+                            </script>
+                            <script type="text/javascript">
+                                $('.image').fancyboxSpectateurs({
+                                    padding: 0,
+                                    helpers: {
+                                        overlay: {
+                                            locked: false
+                                        }
+                                    }
+                                });
+                            </script>
                         <h3>Production</h3>
                         <p class="production">
                             Une production de l’Association Mesdames A, avec le soutien de la Commission Européenne (PEJA 2013), et du Conseil Général de la Haute-Garonne (aide à la création),en partenariat avec le CIAM, Mix’art Myrys et l’association ACT.
@@ -629,6 +628,7 @@
                     </div>
                     <div class="creations satyre" id="satyre">
                         <h2>Le Satyre</h2>
+                        <p><small>Saisons 2012-2013 et 2013-2014</small></p>
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/182463716"></iframe>
                         </div>
@@ -657,11 +657,13 @@
                             <ul class="production">
                                 <li>le <a href="spectateurs">Dossier de communication</a></li>
                                 <li>la <a href="">Revue de presse</a></li>
-                                <li>la <a data-toggle="modal" href="#modal-dates-spectateur">liste des dates passées</a></li>
+                                <li>la <a data-toggle="modal" href="#modal-dates-satyre">liste des dates passées</a></li>
                             </ul>
                     </div>
                     <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyrere</h2>
+                    <p><small>Saison 2010-2011</small></p>
+                    <h2>En Route pour la joie</h2>
+                   <p><small>Saison 2009-2010</small></p>
                 </div>
             </div>
         </div>
@@ -672,13 +674,33 @@
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Compagnie</h1>
-                    <h1>Les acteurs</h1>
-                    <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyre</h2>
+<p>
+La Compagnie Mesdames a est une troupe de théâtre sous forme d'association - loi 1901 ouverte aux échanges, avide d'expérimentations interdisciplinaires et particulièrement encline à partager ses créations devant des publics extrêmement diversifiés (ruraux, citadins, etc.).<br>
+Elle est née à Toulouse en juin 2009 dans le but de créer des spectacles de théâtre mêlant danse, musique, écriture originale, gestion de l'espace visuelle et plastique. Ces spectacles doivent être à la fois inventifs et populaires. Tel est notre cahier des charges : un théâtre exigent mais abordable, ludique mais réflexif !<br>
+<br>
+</p>
+
+                    <h2>L'équipe</h2>
+                    <p>
+Comme toute compagnie, elle vit au rythme des projets et son équipe se modifie selon les besoins de la création en cours. Vous trouverez ci-dessous une bio des membres actuels, ainsi qu'une liste des personnes ayant collaborés aux projets par le passé.</p>
+<div class="row">
+    <div class="col-xs-4">Alice</div>
+    <div class="col-xs-4">Coline</div>
+    <div class="col-xs-4">Simon</div>
+</div>
+<div class="row">
+    <div class="col-xs-4">Elsa</div>
+    <div class="col-xs-4">Lucas</div>
+    <div class="col-xs-4">Les autres...</div>
+</div>
+                  <p>  <a href="media/pdf/statuts1901-mesdames-a.pdf">Statuts de l'association loi 1901</a> et les détails administratifs.<br>
+                  Présidente : Floriane Rascle<br>
+Trésorière : Cécile Courtin<br>
+Siège social : 23 avenue Lamartine, 31620 Labastide Saint Sernin, France<br>
+N° siret : 539 558 304 00017<br>
+Licence d'entrepreneur : n° 2-1050123</p>
+                    <h1>Partenaires</h1>
+
                 </div>
             </div>
         </div>
@@ -689,13 +711,12 @@
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Contact</h1>
-                    <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2>
+                    <p>
+Mail :  cie.mesdames.a {at} gmail.com<br>
+                    http://www.facebook.com/Compagnie-Mesdames-a-161213841387/<br>
+                    https://twitter.com/Mesdames_A<br>
+www.mesdames-a.fr
+                    </p>
                 </div>
             </div>
         </div>
