--- a/index.html
+++ b/index.html
@@ -856,9 +856,8 @@ Elle a travaillé dans le groupe Hortense (free théâtre : improvisation) jusqu
                             </a>
                             <div id="lucas-bio" class="collapse">
                                 <p class="text-center">
+                                 <p class="text-center"> <a data-toggle="modal" href="#modal-bio-lucas">Biographie</a></p>
                                     <ul class="social-network social-circle">
-                                      <p class="text-center"> <a data-toggle="modal" href="#modal-bio-lucas">Biographie</a></p>
-
                         <li><a href="https://fr-fr.facebook.com/lucas.lemauff" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://twitter.com/lucas_lemauff" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="https://www.youtube.com/c/LucasLemauff" class="icoYoutube" title="Youtube"><i class="fa fa-youtube"></i></a></li>
@@ -938,6 +937,58 @@ La troupe a eu la chance de croiser le chemin de nombreux artistes ou technicien
                     </div>
                    
                     <h1>Partenaires</h1>
+                      <div class="row">
+                      <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+                    <div class="row">
+                            <div class="col-xs-6 col-sm-4">
+                                <img src="media/images/partenaires/1-haute-garonne.png" alt="logo Haute Garonne" class="img-responsive logo-partner">
+                                <p class="caption-partenaire">Aide à la création</p>
+                            </div>
+                            <div class="col-xs-6 col-sm-4">
+                                <img src="media/images/partenaires/2-aveyron.jpg" alt="logo aveyron" class="img-responsive logo-partner">                               <p class="caption-partenaire">Aide à la résidence</p>
+
+                            </div>
+                            <div class="clearfix visible-xs-block"></div>
+
+                              <div class="col-xs-6 col-sm-4">
+                                <img src="media/images/partenaires/3-severac.jpg" alt="logo Severac" class="img-responsive logo-partner">
+                            </div>
+                            <div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
+
+                            <div class="col-xs-6 col-sm-4">
+                                <img src="media/images/partenaires/4-ciam.png" alt="logo CIAM" class="img-responsive logo-partner">
+                            </div>
+                            <div class="clearfix visible-xs-block"></div>
+
+                            <div class="col-xs-6 col-sm-4">
+                                <img src="media/images/partenaires/5-ACT.png" alt="logo ACT" class="img-responsive logo-partner">
+                            </div>
+                            <div class="col-xs-6 col-sm-4">
+                                <img src="media/images/partenaires/6-mixart.png" alt="logo Mixart Myris" class="img-responsive logo-partner">
+                            </div>
+
+                                                        <div class="clearfix visible-xs-block visible-sm-block visible-md-block visible-lg-block"></div>
+
+                            <div class="col-xs-6 col-sm-4">
+                                <img src="media/images/partenaires/7-europe-jeunesse.jpg" alt="logo Juenesse en action" class="img-responsive logo-partner">
+                            </div>
+                            <div class="col-xs-6 col-sm-4">
+                                <img src="media/images/partenaires/8-grand-rond.png" alt="logo Theatre du Grand Rond" class="img-responsive logo-partner">
+                            </div>
+                                                        <div class="clearfix visible-xs-block"></div>
+
+                            <div class="col-xs-6 col-sm-4">
+                                <img src="media/images/partenaires/9-burgaud.png" alt="logo Cafe du Burgaud" class="img-responsive logo-partner">
+                            </div>
+                                                        <div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
+
+                            <div class="col-xs-12 col-sm-12">
+                                <img src="media/images/partenaires/10-st-gaudens.png" alt="logo St Gaudens" class="img-responsive logo-partner">
+                            </div>
+                    </div>
+                    </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -949,19 +1000,12 @@ La troupe a eu la chance de croiser le chemin de nombreux artistes ou technicien
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Contact</h1>
                     <p>
-                        Mail : cie.mesdames.a {at} gmail.com
-                        <br> http://www.facebook.com/Compagnie-Mesdames-a-161213841387/ https://twitter.com/Mesdames_A
-                        <br>
-                        <li>
-                            <i class="icon ion-social-facebook">&nbsp;</i>
-                        </li>
-                        <li>
-                            <i class="icon ion-social-twitter">&nbsp;</i>
-                        </li>
-                        <li>
-                            <i class="icon ion-social-linkedin">&nbsp;</i>
-                        </li>
-                        www.mesdames-a.fr
+                        Mail : cie.mesdames.a {at} gmail.com</p>
+                        <ul class="social-network social-circle">
+                                        <li><a href="http://www.facebook.com/Compagnie-Mesdames-a-161213841387/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://twitter.com/Mesdames_A" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                                    </ul>
+                        <p>www.mesdames-a.fr
                     </p>
                 </div>
             </div>
