fix center mail

--- a/index.html
+++ b/index.html
@@ -1269,13 +1269,14 @@
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Contact</h1>
                     <p>
-                        Mail : cie.mesdames.a {at} gmail.com</p>
-                    <p>www.mesdames-a.fr
+                        Mail <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; : cie.mesdames.a {at} gmail.com</p>
+                    <p class="text-center">www.mesdames-a.fr
                     </p>
                     <ul class="social-network social-circle">
                         <li><a href="http://www.facebook.com/Compagnie-Mesdames-a-161213841387/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://twitter.com/Mesdames_A" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                     </ul>
+                    <br><br><br>
                 </div>
             </div>
         </div>
