fix gallery satyre
fix gallery satyre

--- a/index.html
+++ b/index.html
@@ -811,6 +811,9 @@ Laissez-vous guider par La Bestiole et découvrez l’histoire folle des dragons
 <br>
 <hr>
 
+
+
+
                     <!--SATYRE-->
                     <div class="creations satyre" id="satyre">
                         <h2>Le Satyre</h2>
@@ -877,8 +880,8 @@ $window.trigger('scroll');
 <a href="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_Poursuite.jpg" title="Le Satyre - Poursuite" data-gallery="#blueimp-gallery-galsatyre">
         <img src="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_Poursuite.jpg" alt="Le Satyre - Poursuite" width="130">
     </a>
-    <a href="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_épaules.jpg" title="Le Satyre - Epaules" data-gallery="#blueimp-gallery-galsatyre">
-        <img src="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_épaules.jpg" alt="Le Satyre - Epaules" width="130">
+    <a href="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_epaules.jpg" title="Le Satyre - Epaules" data-gallery="#blueimp-gallery-galsatyre">
+        <img src="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_epaules.jpg" alt="Le Satyre - Epaules" width="130">
     </a>
    
 <!--     <a href="creations/satyre/media/images/affiche-satyre.jpg" title="Le Satyre - Affiche" data-gallery="#blueimp-gallery-galsatyre">
@@ -889,8 +892,8 @@ $window.trigger('scroll');
         <img src="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_Guerre.jpg" alt="Le Satyre - Guerre" width="130">
     </a>
        
-       <a href="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_Psyché.jpg" title="Le Satyre - Psyché" data-gallery="#blueimp-gallery-galsatyre">
-        <img src="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_Psyché.jpg" alt="Le Satyre - Psyché" width="130">
+       <a href="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_Psyche.jpg" title="Le Satyre - Psyché" data-gallery="#blueimp-gallery-galsatyre">
+        <img src="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_Psyche.jpg" alt="Le Satyre - Psyché" width="130">
     </a>
      <a href="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_Faune.jpg" title="Le Satyre - Faune" data-gallery="#blueimp-gallery-galsatyre">
         <img src="creations/satyre/media/images/CIE_MESDAMES_A_2012_Satyre_Faune.jpg" alt="Le Satyre - Faune" width="130">
@@ -905,7 +908,7 @@ blueimp.Gallery(
         carousel: true
     }
 );
-</script>  
+</script>   
 
                         <h3>Production</h3>
                         <p class="production">
@@ -931,51 +934,36 @@ blueimp.Gallery(
                                                 <!-- Wrapper for slides -->
                                                 <div class="carousel-inner">
                                                     <div class="item active">
-                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/LeBrigadier.jpg" alt="Le Brigadier">
+                                                        <img class="img-responsive" src="creations/satyre/media/images/revue-presse/LeBrigadier.jpg" alt="Le Brigadier">
                                                         <div class="carousel-caption">
                                                             Le Brigadier, revue des Arts de la scène
                                                         </div>
                                                     </div>
                                                     <div class="item">
-                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/Journal-de-Millau-7mars.jpg" alt="...">
+                                                        <img class="img-responsive" src="creations/satyre/media/images/revue-presse/Journal-de-Millau-7mars.jpg" alt="...">
                                                         <div class="carousel-caption">
                                                             Journal de Millau
                                                         </div>
                                                     </div>
                                                     <div class="item">
-                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/LaGazette-28mars.jpg" alt="...">
+                                                        <img class="img-responsive" src="creations/satyre/media/images/revue-presse/LaGazette-28mars.jpg" alt="...">
                                                         <div class="carousel-caption">
                                                             La Gazette du Comminge
                                                         </div>
                                                     </div>
                                                     <div class="item">
-                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/29-avril-La-Depeche-Villasavary.jpg" alt="...">
+                                                        <img class="img-responsive" src="creations/satyre/media/images/revue-presse/29-avril-La-Depeche-Villasavary.jpg" alt="...">
                                                         <div class="carousel-caption">
                                                             La Dépêche / Aude
                                                         </div>
                                                     </div>
                                                     <div class="item">
-                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/LIndependant-10 avril.jpg" alt="...">
+                                                        <img class="img-responsive" src="creations/satyre/media/images/revue-presse/LIndependant-10 avril.jpg" alt="...">
                                                         <div class="carousel-caption">
                                                             L'Indépendant
                                                         </div>
                                                     </div>
-                                                    <div class="item">
-                                                        <div class="embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3OvblKSkcpc?html5=1"></iframe>
-                                                        </div>
-                                                        <div class="carousel-caption">
-                                                            Interview sur Campus
-                                                        </div>
-                                                    </div>
-                                                    <div class="item">
-                                                        <div class="embed-responsive embed-responsive-16by9">
-                                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/v9Wc4HJnqTo?html5=1"></iframe>
-                                                        </div>
-                                                        <div class="carousel-caption">
-                                                            Chronique sur Canal Sud
-                                                        </div>
-                                                    </div>
+    
                                                 </div>
                                                 <!-- Controls -->
                                                 <a class="left carousel-control" href="#carousel-satyre-generic" role="button" data-slide="prev">
@@ -991,39 +979,37 @@ blueimp.Gallery(
                             </div>
                             <!--stop video when close modal-->
                             <script async>
-                            $("#revue-presse-spectateurs-modal-lg").on('hidden.bs.modal', function(e) {
+                            $("#revue-presse-satyre-modal-lg").on('hidden.bs.modal', function(e) {
                                 var $this = $(this);
                                 var $frame = $this.find('iframe');
                                 $frame.attr("src", $frame.attr("src"));
                             });
                             </script>
                             <!-- Modal dates passees -->
-                            <div id="modal-dates-spectateur" class="modal fade" role="dialog">
+                            <div id="modal-dates-satyre" class="modal fade" role="dialog">
                                 <div class="modal-dialog">
                                     <!-- Modal content-->
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Dates passées - Spectateur(s)</h4>
+                                            <h4 class="modal-title">Dates passées - Le Satyre</h4>
                                         </div>
                                         <div class="modal-body dates-passees">
                                             <ul>
-                                                <li><b>2016</b></li>
-                                                <li>- 10 mars: Scène des Trois Ponts - Castelnaudary (11)</li>
+                                                <li><b>2014</b></li>
+                                                <li>- MJC L'Isle-Jourdain - Gers</li>
                                                 <br>
-                                                <li><b>2015</b></li>
-                                                <li>- 14 novembre: Salle des fêtes - Labastide Saint Sernin (31)</li>
-                                                <li>- 17 octobre: La Canourgue (48)</li>
-                                                <li>- 14 octobre: Saint Gaudens (31)</li>
-                                                <li>- 2 octobre: Toulouse (31)</li>
-                                                <li>- 21 août: Cour d'honneur - Séverac le Château (12)</li>
-                                                <li>- 13 juin: La Halle du Café-Théâtre - Le Burgaud (31)</li>
-                                                <li>- 6 juin: Le Kiosque - Villefranche de Rouergue (12)</li>
-                                                <li>- 4 avril: Les Halles - Villasavary (11)</li>
-                                                <li>- 28 mars: Salle du Foyer de la Mairie - Clarac (31)</li>
-                                                <li>- 7 mars: Salle des Fêtes - Lapanouse de Séverac (12)</li>
-                                                <li>- 21 février: Le Préau - La Salvetat Saint Gilles (31)</li>
-                                                <li>- 20 et 21 janvier 2015&nbsp;: Fabrique Arts, Culture - Toulouse (31)</li>
+                                                <li><b>2013</b></li>
+                                                <li>- 1er juin: Halles de Villasavary - Aude</li>
+                                                <li>- 30 mars: Salle du Foyer Rural - CLARAC</li>
+                                                <li>- 22 mars: Mix'art Myrys - Toulouse (31) - Soirée Grèce et Démocratie avec le Collectif Ciné 2000</li>
+                                                <li>- 21 février au 2 mars: Théâtre de la Violette - Toulouse (31)</li>
+                                                <br>
+                                                <li><b>2012</b></li>
+                                                <li>- 24 août: Cour d'honneur - Séverac le Château (12)</li>
+                                                <li>- 16 juin: Lapanouse - Aveyron (12)</li>
+                                                <li>- 13 avril:  Théâtre des Trois Ponts - Castelnaudary</li>
+                                                <li>- 31 mars : La Maison de la Terre à 21h - Poucharramet</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -1057,7 +1043,7 @@ blueimp.Gallery(
 
 
 
-    <!-- Creation Section -->
+    <!-- Compagnie Section -->
     <section id="compagnie" class="compagnie-section">
         <div class="container">
             <div class="row">
