--- a/index.html
+++ b/index.html
@@ -1242,7 +1242,7 @@ Souvent, aussi, elle nous traite de moutons.<br>
                     </div>
 <br>
 <hr>
-                    
+
                 </div>
             </div>
         </div>
@@ -1625,13 +1625,17 @@ Notre but est de créer un théâtre exigeant mais abordable, ludique mais invit
                     <p><br>
                     Retrouvez nous aussi sur les réseaux sociaux&nbsp;:<br>
                     </p>
-                    
+                    <div class="logo-contact">
                     <ul class="social-network social-circle">
                         <li><a href="http://www.facebook.com/Compagnie-Mesdames-a-161213841387/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://twitter.com/Mesdames_A" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                     </ul>
+                    </div>
+<div class="adresse-internet">
                     <p class="text-center">
-                    <a href="http://mesdames-a.fr">www.mesdames-a.fr</a></p>
+                    <a href="http://mesdames-a.fr">www.mesdames-a.fr</a>
+                    </p>
+                    </div>
                     <br>
                 </div>
             </div>
