--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@ Souvent, aussi, elle nous traite de moutons.<br>
 Notre théâtre se veut populaire, nous aimons aller à la rencontre de publics diversifiés. <br>
 Notre but est de créer un théâtre exigeant mais abordable, ludique mais invitant à la réflexion!<br></p>
  <p>
-                <h3>Status de la compagnie</h3>
+                <h3>Statuts de la compagnie</h3>
                         <p> 
                         Télécharger les <a href="media/pdf/statuts1901-mesdames-a.pdf">statuts de la compagnie</a> (association - loi 1901).<br>
                       
@@ -1322,7 +1322,8 @@ Notre but est de créer un théâtre exigeant mais abordable, ludique mais invit
                     </p>
                     <h2>L'équipe</h2>
                     <p>
-                        Comme toute compagnie, Medasmes A vit au rythme des projets et son équipe se modifie selon les besoins de la création en cours. Vous trouverez ci-dessous une bio des membres actuels, ainsi qu'une liste des personnes ayant collaborés aux projets par le passé.</p>
+                        Comme toute compagnie, Medasmes A vit au rythme des projets et son équipe se modifie selon les besoins de la création en cours.<br>
+                        Ci-dessous une bio des membres actuels, ainsi qu'une liste des personnes ayant collaborés aux projets par le passé:</p>
                     <div class="row">
                         <div class="col-xs-6 col-sm-4">
                             <a href="#alice-bio" data-toggle="collapse">
