--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ $(window).scroll( function(){
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
-                    <p>Après avoir partagé <i>La Cité des Dragons</i> avec près de 1000 spectateurs cet été, la Compagnie Mesdames A se prépare pour les deux belles programmations de <i><a href="#spectateurs">SPECTATEUR(S)</a>...</i> dans sa nouvelle distribution.
+                    <p>Après avoir partagé <i>La Cité des Dragons</i> avec près de 1000 spectateurs cet été, la Compagnie Mesdames A prépare les deux programmations à venir de <i><a href="#spectateurs">SPECTATEUR(S)</a>...</i> dans sa nouvelle distribution.
                     </p>
                 
                     <h3>Dates pour <i>SPECTATEUR(S), un accident de théâtre</i></h3>
