fix divers feedback alice
feedback alice

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ blueimp.Gallery(
     }
 );
 </script>  
-<h3>Le pitch du spectacle</h3>
+<h3>Le spectacle</h3>
 <p>Vous ne le savez sans doute pas Encore mais la cité de Sévérac le Château abrite de drôles de personnages. Il y a La Bestiole créée de toutes pièces, il y a aussi la magicienne dévoreuse de chamalow, mais il y a surtout ceux qui se cachent. Il paraît que dans la magie des ruelles gît un dragon solitaire qui ne se laisse apercevoir que par qui veut bien y croire. Ouvrez grands vos yeux et vos oreilles, peut-être en rencontrerez-vous un plus vite que prévu.<br>
 Laissez-vous guider par La Bestiole et découvrez l’histoire folle des dragons de la cité de Sévérac. Une déambulation pleine de surprises qui vous fera voyager dans le temps et de par le monde. Magie et musique vous accompagneront tout le long de cette soirée fantastique dont vous vous souviendrez encore longtemps.</p>
 
@@ -1299,10 +1299,10 @@ Souvent, aussi, elle nous traite de moutons.<br>
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Compagnie</h1>
                     <p>
-                        La Compagnie Mesdames A est une troupe de théâtre née à Toulouse en juin 2009.
+                        La Compagnie de théâtre Mesdames A est née à Toulouse en juin 2009.
 <br> Nos spectacles mêlent jeu, danse, musique et chant. Ils sont souvent basés sur une écriture originale. Dans son travail sur l'espace visuel, la compagnie cherche à surprendre et à proposer des mises en scène inventives.<br>
 Notre théâtre se veut populaire, nous aimons aller à la rencontre de publics diversifiés. <br>
-Notre but est de créer un théâtre exigeant mais abordable, ludique mais invitant à la réflexion!<br></p>
+Notre but est de créer un théâtre exigeant mais abordable, ludique mais invitant à la réflexion.<br></p>
  <p>
                 <h3>Statuts de la compagnie</h3>
                         <p> 
@@ -1322,7 +1322,7 @@ Notre but est de créer un théâtre exigeant mais abordable, ludique mais invit
                     </p>
                     <h2>L'équipe</h2>
                     <p>
-                        Comme toute compagnie, Medasmes A vit au rythme des projets et son équipe se modifie selon les besoins de la création en cours.<br>
+                        Comme toute compagnie, Mesdames A vit au rythme des projets et son équipe se modifie selon les besoins de la création en cours.<br>
                         Ci-dessous une bio des membres actuels, ainsi qu'une liste des personnes ayant collaborés aux projets par le passé:</p>
                     <div class="row">
                         <div class="col-xs-6 col-sm-4">
